# getriebe

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opcode_help.txt
include/: getriebe.h
src/: getriebe.c  main.c  opcode_opcode_branch.h  stack_manipulation.h
src/opcode/: opcode.h  opcode_branch.c  opcode_branch.h  opcode_control.c  opcode_control.h  opcode_data_manipulation.c  opcode_data_manipulation.h  opcode_data_transfer.h  opcode_load.h  opcode_logic.h  opcode_math.h  opcode_multiply.h  opcode_software_interrupt.h  opcode_store.h
src/test/: opcode_branch_test.h  opcode_data_manipulation_test.h
test/: CMakeLists.txt
test/src/opcodes/: opcode_branch_test.h
validation/: CMakeLists.txt
validation/src/: main.c
validation/src/opcodes/: opcode_branch_test.h  opcode_data_manipulation_test.h
validation/src/opcodes/branch/: branch_link.h  branch_non_link.h
